[package]
name = "hello-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "3.4.0"
actix-server = "2.3.0"
actix-service = "2.0.2"
actix-web = { version = "4.4.0" }
tokio = { version = "1.35.0" , features = ["full"]}
futures-util = "0.3.29"
actix-rt = "2.9.0"

